Further layout bug fixes
Fixing linting warning on image, sizing of background, and customizing expander animation

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -2,7 +2,7 @@
 .home {
     position: relative;
     >div {
-        position: absolute;
+        position: relative;
         z-index: 1;
         h1 {
             font-size: 164px;
